@@ -1,6 +1,10 @@
 glibc (2.22-9) UNRELEASED; urgency=medium
 
+  [ Samuel Thibault ]
   * hurd-i386/cvs-libpthread.so.diff: Fix building malloc tests.
+
+  [ Aurelien Jarno ]
+  * debian/testsuite-xfail-debian.mk: drop check on i586 flavours.
 
  -- Samuel Thibault <sthibault@debian.org>  Thu, 12 May 2016 01:05:26 +0200
 
